WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
268397
[WGSL] Continuing should not apply to its own block
https://bugs.webkit.org/show_bug.cgi?id=268397
Summary
[WGSL] Continuing should not apply to its own block
Tadeu Zagallo
Reported
2024-01-30 10:31:21 PST
...
Attachments
Add attachment
proposed patch, testcase, etc.
Tadeu Zagallo
Comment 1
2024-01-30 10:31:28 PST
<
rdar://problem/121520338
>
Tadeu Zagallo
Comment 2
2024-01-30 10:34:42 PST
Pull request:
https://github.com/WebKit/WebKit/pull/23527
EWS
Comment 3
2024-01-31 05:55:18 PST
Committed
273824@main
(178b3aea111f): <
https://commits.webkit.org/273824@main
> Reviewed commits have been landed. Closing PR #23527 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug