[WGSL] Continuing should not apply to its own block https://bugs.webkit.org/show_bug.cgi?id=268397 rdar://121520338

Reviewed by Mike Wyrzykowski.

Take the following code:
  loop { continuing { loop { continue; } } }

The continuing block does not apply to the nested continue statement, so we need
to clear the reference to the continuing while visiting its block.

* Source/WebGPU/WGSL/Metal/MetalFunctionWriter.cpp:
(WGSL::Metal::FunctionDefinitionWriter::visit):
* Source/WebGPU/WGSL/tests/valid/loop.wgsl:

Canonical link: https://commits.webkit.org/273824@main